--- a/Semana 5/Frontend/vr-frontend/src/app/components/mark-completed/mark-completed.component.html
+++ b/Semana 5/Frontend/vr-frontend/src/app/components/mark-completed/mark-completed.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let item of vacationRequests">
-  <h1>{{ item.requester.email }}</h1>
+  <h1>{{ item.requester?.email }}</h1>
   <p>{{ item.startDate }} to {{ item.endDate }}</p>
   <p>Reason: {{ item.reason }}</p>
   <p>Status: {{ item.status }}</p>
