--- a/Semana 5/Frontend/vr-frontend/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Semana 5/Frontend/vr-frontend/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
   <ul>
     <li><a routerLink="/createRequest">Create Request</a></li>
-    <li><a routerLink="/requestList">Request List</a></li>
-    <li><a routerLink="/completedRequest">Completed Requests</a></li>
+    <li *ngIf="getHR()"><a routerLink="/requestList">Request List</a></li>
+    <li *ngIf="getHR()">
+      <a routerLink="/completedRequest">Completed Requests</a>
+    </li>
   </ul>
 </nav>
