--- a/Semana 5/Frontend/vr-frontend/src/app/components/create-request/create-request.component.html
+++ b/Semana 5/Frontend/vr-frontend/src/app/components/create-request/create-request.component.html
@@ -1,1 +1,23 @@
-<p>create-request works!</p>
+<div class="form-container">
+  <h2>Request Vacation</h2>
+  <form [formGroup]="vacationRequestForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="startDate">Start Date</label>
+      <input type="date" id="startDate" formControlName="startDate" />
+    </div>
+
+    <div class="form-group">
+      <label for="endDate">End Date</label>
+      <input type="date" id="endDate" formControlName="endDate" />
+    </div>
+
+    <div class="form-group">
+      <label for="reason">Reason</label>
+      <textarea id="reason" formControlName="reason"></textarea>
+    </div>
+
+    <button type="submit" [disabled]="!vacationRequestForm.valid">
+      Submit
+    </button>
+  </form>
+</div>
