--- a/Semana 5/Frontend/vr-frontend/src/app/app.component.html
+++ b/Semana 5/Frontend/vr-frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navigation-bar></app-navigation-bar>
+<div *ngIf="getCredentials()">
+  <app-navigation-bar></app-navigation-bar>
+</div>
 <router-outlet></router-outlet>
